feat: try to resolve interceptors from CDI first (#1101)